--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -26,9 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: 
-        npm i
-        cd frontend
-        npm i
+    - run:  npm i
+    - run:  cd frontend
+    - run:  npm i
     - run: npm run build --if-present
     - run: npm test
