--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -31,3 +31,9 @@ jobs:
     - run:  npm i
     - run: npm run build --if-present
     - run: npm test
+          cd ..
+          pm2 stop 0
+          pm2 start 0
+          pm2 save
+          sudo service nginx restart
+
