--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -30,10 +30,9 @@ jobs:
     - run:  cd frontend
     - run:  npm i
     - run: npm run build --if-present
-    - run: npm test
-          cd ..
-          pm2 stop 0
-          pm2 start 0
-          pm2 save
-          sudo service nginx restart
-
+    - run: npm test  
+    - run: cd ..  
+    - run: pm2 stop 0
+    - run: pm2 start 0
+    - run: pm2 save
+    - run: sudo service nginx restart
