--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -29,7 +29,7 @@ jobs:
     - run:  npm i
     - run:  cd frontend
     - run:  npm i
-    - run: npm run build --if-present
+    - run: npm run build 
     - run: npm test  
     - run: cd ..  
     - run: pm2 stop 0
