--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "node app.js",
-    "build": "react-scripts build"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
