--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -27,12 +27,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: cd frontend/
-    - run: npm i
-    - run: npm build 
-    - run: npm test  
-    - run: cd ..  
-    - run: pm2 stop 0
-    - run: pm2 start 0
-    - run: pm2 save
-    - run: sudo service nginx restart
+           cd frontend/
+           npm i
+           npm build 
+           npm test  
+           cd ..  
+           pm2 stop 0
+           pm2 start 0
+           pm2 save
+           sudo service nginx restart
