--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -25,13 +25,14 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm i
-    - run: cd frontend/
-    - run: npm i
-    - run: npm test  
-    - run: npm run build 
-    - run: cd ..  
-    - run: pm2 stop 0
-    - run: pm2 start 0
-    - run: pm2 save
-    - run: sudo service nginx restart
+    - run: 
+       npm i
+       cd frontend/
+       npm i
+       npm test  
+       npm run build 
+       cd ..  
+       pm2 stop 0
+       pm2 start 0
+       pm2 save
+       sudo service nginx restart
