--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://thobbyAk.github.io/demo-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
