--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: 
        npm i
-       cd frontend/
+       cd frontend
        npm i
        npm test  
        npm run build 
