--- a/.github/workflows/demoApp.js.yml
+++ b/.github/workflows/demoApp.js.yml
@@ -25,13 +25,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: 
+    - run: |
        npm i
        cd frontend
        npm i
        npm test  
        npm run build 
-       cd .. / 
+       cd ..  
        pm2 stop 0
        pm2 start 0
        pm2 save
